--- a/README.html
+++ b/README.html
@@ -1,1 +1,13 @@
-Hello world
+<!doctype html>
+<html lang="en-US">
+	<head>
+		<meta charset="UTF-8">
+		<title>Home Page -- Changes to push<title>
+	</head>
+	<body>
+		<nav></nav>
+		<header></header>
+		<main></main>
+		<footer></footer>
+	</body>
+</html>
